--- a/assets/css/jumbotron.css
+++ b/assets/css/jumbotron.css
@@ -34,6 +34,7 @@
     font-size: 60px;
     font-weight: bolder;
     font-family: 'Montserrat', sans-serif, monospace;
+    color: #d37000;
 }
 
 .jumbotron .container .lead {
