--- a/assets/css/jumbotron.css
+++ b/assets/css/jumbotron.css
@@ -16,6 +16,7 @@
     position: absolute;
     top: 0;
 }
+
 .jumbotron .container {
     position: relative;
     z-index: 1;
@@ -24,16 +25,15 @@
 .jumbotron .container h1 {
     color: white;
     margin-top: 130px;
-    font-family: 'Montserrat', sans-serif, monospace;
     text-shadow: 1px 1px rgba(0, 0, 0, 0.6);
-    font-size: 80px;
+    font-size: 70px;
+    font-weight: bold;
     margin-bottom: 30px;
 }
 
 .jumbotron .container span {
-    font-size: 60px;
-    font-weight: bolder;
-    font-family: 'Montserrat', sans-serif, monospace;
+    font-size: 50px;
+    font-weight: bold;
     color: #d37000;
 }
 
